fix: separator not visible inside the editor [#3888]

--- a/assets/scss/components/main/_separators.scss
+++ b/assets/scss/components/main/_separators.scss
@@ -1,6 +1,6 @@
 // === Separators === //
 .wp-block-separator {
-	//border-bottom: 0;
+	border-bottom: 0;
 	border-top: 2px solid;
 
 	&.is-style-wide {
